--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -1,65 +1,126 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.bg-black { background: #000; }
-.bg-white { background: #fff; }
-.bg-white-95 { background-color: rgba(255, 255, 255, 0.95) };
+.bg-black {
+  background: #000;
+}
+.bg-white {
+  background: #fff;
+}
+.bg-white-95 {
+  background-color: rgba(255, 255, 255, 0.95);
+}
 
+.white {
+  color: #fff;
+}
+.black {
+  color: #000;
+}
 
-.white { color: #fff; }
-.black { color: #000; }
-
-.tc  { text-align: center; }
+.tc {
+  text-align: center;
+}
 
 .center {
   margin-right: auto;
   margin-left: auto;
 }
 
-.minw-25 { min-width: 25%; }
-.minw-33 { min-width: calc(100% / 3); }
-
-.mw-22 { max-width: 22rem; }
-.mw-40 { max-width: 40rem; }
-.mw-50 { max-width: 50rem; }
-.mw-60 { max-width: 60rem; }
-
-.mh-100 { max-height: 100%; }
-.minh-100vh { min-height: 100vh; }
-
-.w-25 { width: 25%; }
-.w-100 { width: 100%; }
-
-.w-1 { width:1rem; }
-.w-10 { width: 10rem; }
-.w-12 { width: 12rem; }
-.w-15 { width: 15rem; }
-.w-20 { width: 20rem; }
-.w-30 { width: 30rem; }
-
-.h-0 { height:0rem; }
-.h-auto { height: auto; }
-.h-05 { height:.5rem; }
-
-.w-grid { min-width: calc((100% / 3) - (6rem / 3)); }
-
-.hide { visibility: hidden; }
-
-.mirror {
-    -webkit-transform: scale(-1, 1);
-    -moz-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    transform: scale(-1, 1);
+.minw-25 {
+  min-width: 25%;
+}
+.minw-33 {
+  min-width: calc(100% / 3);
 }
 
-.absolute { position: absolute; }
-.relative { position: relative; }
-.fixed { position: fixed; }
+.mw-22 {
+  max-width: 22rem;
+}
+.mw-40 {
+  max-width: 40rem;
+}
+.mw-50 {
+  max-width: 50rem;
+}
+.mw-60 {
+  max-width: 60rem;
+}
 
-.bump { line-height: 0; }
+.mh-100 {
+  max-height: 100%;
+}
+.minh-100vh {
+  min-height: 100vh;
+}
+
+.w-25 {
+  width: 25%;
+}
+.w-100 {
+  width: 100%;
+}
+
+.w-1 {
+  width: 1rem;
+}
+.w-10 {
+  width: 10rem;
+}
+.w-12 {
+  width: 12rem;
+}
+.w-15 {
+  width: 15rem;
+}
+.w-20 {
+  width: 20rem;
+}
+.w-30 {
+  width: 30rem;
+}
+
+.h-0 {
+  height: 0rem;
+}
+.h-auto {
+  height: auto;
+}
+.h-05 {
+  height: 0.5rem;
+}
+
+.w-grid {
+  min-width: calc((100% / 3) - (6rem / 3));
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.mirror {
+  -webkit-transform: scale(-1, 1);
+  -moz-transform: scale(-1, 1);
+  -ms-transform: scale(-1, 1);
+  -o-transform: scale(-1, 1);
+  transform: scale(-1, 1);
+}
+
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
+.fixed {
+  position: fixed;
+}
+
+.bump {
+  line-height: 0;
+}
 
 .overflow-hidden {
   height: 100%;
@@ -72,23 +133,56 @@
   -webkit-overflow-scrolling: touch;
 }
 
-.t-0 { top: 0; }
-.r-0 { right: 0; }
-.b-0 { bottom: 0; }
-.l-0 { left: 0; }
+.t-0 {
+  top: 0;
+}
+.r-0 {
+  right: 0;
+}
+.b-0 {
+  bottom: 0;
+}
+.l-0 {
+  left: 0;
+}
 
-.t-2 { top: 2rem; }
-.r-2 { right: 2rem; }
+.t-2 {
+  top: 2rem;
+}
+.r-2 {
+  right: 2rem;
+}
 
-.z-2 { z-index: 2; }
+.z-2 {
+  z-index: 2;
+}
 
-.none { display: none; }
-.block { display: block; }
-.inlineblock { display: inline-block; }
+.none {
+  display: none;
+}
+.block {
+  display: block;
+}
+.inlineblock {
+  display: inline-block;
+}
 
-.dim { opacity: 1; -webkit-transition: opacity .15s ease-in; transition: opacity .15s ease-in; }
-.dim:hover, .dim:focus { opacity: .7; -webkit-transition: opacity .15s ease-in; transition: opacity .15s ease-in; }
-.dim:active { opacity: .8; -webkit-transition: opacity .15s ease-out; transition: opacity .15s ease-out; }
+.dim {
+  opacity: 1;
+  -webkit-transition: opacity 0.15s ease-in;
+  transition: opacity 0.15s ease-in;
+}
+.dim:hover,
+.dim:focus {
+  opacity: 0.7;
+  -webkit-transition: opacity 0.15s ease-in;
+  transition: opacity 0.15s ease-in;
+}
+.dim:active {
+  opacity: 0.8;
+  -webkit-transition: opacity 0.15s ease-out;
+  transition: opacity 0.15s ease-out;
+}
 
 .overlay {
   height: 100%;
@@ -97,40 +191,40 @@
   left: 0;
   opacity: 0;
   position: absolute;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 .overlay:hover {
   opacity: 1;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 
 .link {
   text-decoration: none;
-  transition: color .15s ease-in;
+  transition: color 0.15s ease-in;
 }
 
 .link:link,
 .link:visited {
-  transition: color .15s ease-in;
+  transition: color 0.15s ease-in;
 }
-.link:hover   {
-  transition: color .15s ease-in;
+.link:hover {
+  transition: color 0.15s ease-in;
 }
-.link:active  {
-  transition: color .15s ease-in;
+.link:active {
+  transition: color 0.15s ease-in;
 }
-.link:focus   {
-  transition: color .15s ease-in;
+.link:focus {
+  transition: color 0.15s ease-in;
   outline: 1px dotted currentColor;
 }
 
 .left {
   float: left;
-  display:inline;
+  display: inline;
 }
 .right {
   float: right;
-  display:inline;
+  display: inline;
 }
 
 .transition-05 {
@@ -142,223 +236,487 @@
 }
 
 .cf:before,
-.cf:after { content: " "; display: table; }
-.cf:after { clear: both; }
-.cf { *zoom: 1; }
+.cf:after {
+  content: " ";
+  display: table;
+}
+.cf:after {
+  clear: both;
+}
+.cf {
+  *zoom: 1;
+}
 
 .border-box {
   box-sizing: border-box;
 }
 
-.ws-prewrap { white-space: pre-wrap; }
-
+.ws-prewrap {
+  white-space: pre-wrap;
+}
 
 .vc {
   top: 50%;
   transform: translateY(-50%);
 }
 
-.border-top { border-top: 1px solid #fff; }
-.border-bottom { border-bottom: 1px solid #fff; }
+.border-top {
+  border-top: 1px solid #fff;
+}
+.border-bottom {
+  border-bottom: 1px solid #fff;
+}
 
-.flex { display: flex; }
-.flex-none { flex: none; }
-.flex-wrap { flex-wrap: wrap; }
-.justify-between { justify-content: space-between; }
+.flex {
+  display: flex;
+}
+.flex-none {
+  flex: none;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.justify-between {
+  justify-content: space-between;
+}
 
 .fade {
-    -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein .5s; /* Firefox < 16 */
-        -ms-animation: fadein .5s; /* Internet Explorer */
-         -o-animation: fadein .5s; /* Opera < 12.1 */
-            animation: fadein .5s;
+  -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 0.5s; /* Firefox < 16 */
+  -ms-animation: fadein 0.5s; /* Internet Explorer */
+  -o-animation: fadein 0.5s; /* Opera < 12.1 */
+  animation: fadein 0.5s;
 }
 
 @keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /* Internet Explorer */
 @-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slide-bottom {
-  from { transform: translateY(100%); }
-  to   { transform: translateY(0%); }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 /* Firefox < 16 */
 @-moz-keyframes slide-bottom {
-  from { transform: translateY(100%); }
-  to   { transform: translateY(0%); }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes slide-bottom {
-  from { transform: translateY(100%); }
-  to   { transform: translateY(0%); }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 /* Internet Explorer */
 @-ms-keyframes slide-bottom {
-  from { transform: translateY(100%); }
-  to   { transform: translateY(0%); }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 /* Opera < 12.1 */
 @-o-keyframes slide-bottom {
-  from { transform: translateY(100%); }
-  to   { transform: translateY(0%); }
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0%);
+  }
 }
 
 @keyframes slide-right {
-  from { transform: translateX(100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Firefox < 16 */
 @-moz-keyframes slide-right {
-  from { transform: translateX(100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes slide-right {
-  from { transform: translateX(100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Internet Explorer */
 @-ms-keyframes slide-right {
-  from { transform: translateX(100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Opera < 12.1 */
 @-o-keyframes slide-right {
-  from { transform: translateX(100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 
 @keyframes slide-left {
-  from { transform: translateX(-100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Firefox < 16 */
 @-moz-keyframes slide-left {
-  from { transform: translateX(-100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes slide-left {
-  from { transform: translateX(-100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Internet Explorer */
 @-ms-keyframes slide-left {
-  from { transform: translateX(-100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 /* Opera < 12.1 */
 @-o-keyframes slide-left {
-  from { transform: translateX(-100%); }
-  to   { transform: translateX(0%); }
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
 }
 
-.pa025 { padding: .25rem; }
-.pa05 { padding: .5rem; }
-.pa1 { padding: 1rem; }
-.pa2 { padding: 2rem; }
-.pa3 { padding: 3rem; }
-.pa4 { padding: 4rem; }
-.pa5 { padding: 5rem; }
-.pt025 { padding-top: .25rem; }
-.pt05 { padding-top: .5rem; }
-.pt1 { padding-top: 1rem; }
-.pt2 { padding-top: 2rem; }
-.pt3 { padding-top: 3rem; }
-.pt4 { padding-top: 4rem; }
-.pt5 { padding-top: 5rem; }
-.pb025 { padding-bottom: .25rem; }
-.pb05 { padding-bottom: .5rem; }
-.pb1 { padding-bottom: 1rem; }
-.pb15 { padding-bottom: 1.5rem; }
-.pb2 { padding-bottom: 2rem; }
-.pb3 { padding-bottom: 3rem; }
-.pb4 { padding-bottom: 4rem; }
-.pb5 { padding-bottom: 5rem; }
-.pl025 { padding-left: .25rem; }
-.pl05 { padding-left: .5rem; }
-.pl1 { padding-left: 1rem; }
-.pl2 { padding-left: 2rem; }
-.pl3 { padding-left: 3rem; }
-.pl4 { padding-left: 4rem; }
-.pl5 { padding-left: 5rem; }
-.pr025 { padding-right: .25rem; }
-.pr05 { padding-right: .5rem; }
-.pr1 { padding-right: 1rem; }
-.pr2 { padding-right: 2rem; }
-.pr3 { padding-right: 3rem; }
-.pr4 { padding-right: 4rem; }
-.pr5 { padding-right: 5rem; }
+.pa025 {
+  padding: 0.25rem;
+}
+.pa05 {
+  padding: 0.5rem;
+}
+.pa1 {
+  padding: 1rem;
+}
+.pa2 {
+  padding: 2rem;
+}
+.pa3 {
+  padding: 3rem;
+}
+.pa4 {
+  padding: 4rem;
+}
+.pa5 {
+  padding: 5rem;
+}
+.pt025 {
+  padding-top: 0.25rem;
+}
+.pt05 {
+  padding-top: 0.5rem;
+}
+.pt1 {
+  padding-top: 1rem;
+}
+.pt2 {
+  padding-top: 2rem;
+}
+.pt3 {
+  padding-top: 3rem;
+}
+.pt4 {
+  padding-top: 4rem;
+}
+.pt5 {
+  padding-top: 5rem;
+}
+.pb025 {
+  padding-bottom: 0.25rem;
+}
+.pb05 {
+  padding-bottom: 0.5rem;
+}
+.pb1 {
+  padding-bottom: 1rem;
+}
+.pb15 {
+  padding-bottom: 1.5rem;
+}
+.pb2 {
+  padding-bottom: 2rem;
+}
+.pb3 {
+  padding-bottom: 3rem;
+}
+.pb4 {
+  padding-bottom: 4rem;
+}
+.pb5 {
+  padding-bottom: 5rem;
+}
+.pl025 {
+  padding-left: 0.25rem;
+}
+.pl05 {
+  padding-left: 0.5rem;
+}
+.pl1 {
+  padding-left: 1rem;
+}
+.pl2 {
+  padding-left: 2rem;
+}
+.pl3 {
+  padding-left: 3rem;
+}
+.pl4 {
+  padding-left: 4rem;
+}
+.pl5 {
+  padding-left: 5rem;
+}
+.pr025 {
+  padding-right: 0.25rem;
+}
+.pr05 {
+  padding-right: 0.5rem;
+}
+.pr1 {
+  padding-right: 1rem;
+}
+.pr2 {
+  padding-right: 2rem;
+}
+.pr3 {
+  padding-right: 3rem;
+}
+.pr4 {
+  padding-right: 4rem;
+}
+.pr5 {
+  padding-right: 5rem;
+}
 
-.ma025 { margin: .25rem; }
-.ma05 { margin: .5rem; }
-.ma1 { margin: 1rem; }
-.ma2 { margin: 2rem; }
-.ma3 { margin: 3rem; }
-.ma4 { margin: 4rem; }
-.ma5 { margin: 5rem; }
-.mt025 { margin-top: .25rem; }
-.mt05 { margin-top: .5rem; }
-.mt1 { margin-top: 1rem; }
-.mt2 { margin-top: 2rem; }
-.mt3 { margin-top: 3rem; }
-.mt4 { margin-top: 4rem; }
-.mt5 { margin-top: 5rem; }
-.mb025 { margin-bottom: .25rem; }
-.mb05 { margin-bottom: .5rem; }
-.mb1 { margin-bottom: 1rem; }
-.mb15 { margin-bottom: 1.5rem; }
-.mb2 { margin-bottom: 2rem; }
-.mb3 { margin-bottom: 3rem; }
-.mb4 { margin-bottom: 4rem; }
-.mb5 { margin-bottom: 5rem; }
-.ml025 { margin-left: .25rem; }
-.ml05 { margin-left: .5rem; }
-.ml1 { margin-left: 1rem; }
-.ml2 { margin-left: 2rem; }
-.ml3 { margin-left: 3rem; }
-.ml4 { margin-left: 4rem; }
-.ml5 { margin-left: 5rem; }
-.mr025 { margin-right: .25rem; }
-.mr05 { margin-right: .5rem; }
-.mr1 { margin-right: 1rem; }
-.mr2 { margin-right: 2rem; }
-.mr3 { margin-right: 3rem; }
-.mr4 { margin-right: 4rem; }
-.mr5 { margin-right: 5rem; }
+.ma025 {
+  margin: 0.25rem;
+}
+.ma05 {
+  margin: 0.5rem;
+}
+.ma1 {
+  margin: 1rem;
+}
+.ma2 {
+  margin: 2rem;
+}
+.ma3 {
+  margin: 3rem;
+}
+.ma4 {
+  margin: 4rem;
+}
+.ma5 {
+  margin: 5rem;
+}
+.mt025 {
+  margin-top: 0.25rem;
+}
+.mt05 {
+  margin-top: 0.5rem;
+}
+.mt1 {
+  margin-top: 1rem;
+}
+.mt2 {
+  margin-top: 2rem;
+}
+.mt3 {
+  margin-top: 3rem;
+}
+.mt4 {
+  margin-top: 4rem;
+}
+.mt5 {
+  margin-top: 5rem;
+}
+.mb025 {
+  margin-bottom: 0.25rem;
+}
+.mb05 {
+  margin-bottom: 0.5rem;
+}
+.mb1 {
+  margin-bottom: 1rem;
+}
+.mb15 {
+  margin-bottom: 1.5rem;
+}
+.mb2 {
+  margin-bottom: 2rem;
+}
+.mb3 {
+  margin-bottom: 3rem;
+}
+.mb4 {
+  margin-bottom: 4rem;
+}
+.mb5 {
+  margin-bottom: 5rem;
+}
+.ml025 {
+  margin-left: 0.25rem;
+}
+.ml05 {
+  margin-left: 0.5rem;
+}
+.ml1 {
+  margin-left: 1rem;
+}
+.ml2 {
+  margin-left: 2rem;
+}
+.ml3 {
+  margin-left: 3rem;
+}
+.ml4 {
+  margin-left: 4rem;
+}
+.ml5 {
+  margin-left: 5rem;
+}
+.mr025 {
+  margin-right: 0.25rem;
+}
+.mr05 {
+  margin-right: 0.5rem;
+}
+.mr1 {
+  margin-right: 1rem;
+}
+.mr2 {
+  margin-right: 2rem;
+}
+.mr3 {
+  margin-right: 3rem;
+}
+.mr4 {
+  margin-right: 4rem;
+}
+.mr5 {
+  margin-right: 5rem;
+}
 
-
-.flex { display: flex; }
+.flex {
+  display: flex;
+}
 .flex-between {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
-.flex-row { flex-direction: row; }
-.flex-wrap { flex-wrap: wrap }
-.flex-grow { flex-grow: 1; }
+.flex-row {
+  flex-direction: row;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-grow {
+  flex-grow: 1;
+}
 
-.dn { display: none; }
+.dn {
+  display: none;
+}
 
-br { display: none; }
+br {
+  display: none;
+}
+
+.local-video {
+  display: flex;
+  video {
+    margin: 0 auto;
+    max-height: 90vh;
+    max-width: 100%;
+  }
+}
